--- a/src/edu/evenement/gui/AjouterEvenement.fxml
+++ b/src/edu/evenement/gui/AjouterEvenement.fxml
@@ -2,27 +2,42 @@
 
 <?import java.lang.String?>
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.DatePicker?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.HBox?>
+<?import javafx.scene.text.Font?>
 
-<AnchorPane id="AnchorPane" prefHeight="400.0" prefWidth="600.0" stylesheets="@first.css" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="edu.evenement.gui.AjouterEvenementController">
+<AnchorPane id="AnchorPane" prefHeight="400.0" prefWidth="600.0" stylesheets="@style.css" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="edu.evenement.gui.AjouterEvenementController">
    <children>
-      <TextField fx:id="tfnom" layoutX="122.0" layoutY="102.0" styleClass="shadow" stylesheets="@first.css" />
-      <Button fx:id="addcatevent" layoutX="390.0" layoutY="325.0" mnemonicParsing="false" onAction="#addcatevent" prefHeight="26.0" prefWidth="66.0" stylesheets="@first.css" text="Ajouter">
+      <TextField fx:id="tfnom" layoutX="226.0" layoutY="93.0" prefHeight="26.0" prefWidth="174.0" styleClass="shadow" />
+      <Button fx:id="addcatevent" layoutX="280.0" layoutY="302.0" mnemonicParsing="false" onAction="#addcatevent" prefHeight="26.0" prefWidth="66.0" text="Ajouter">
          <styleClass>
             <String fx:value="search-button" />
             <String fx:value="shadow" />
          </styleClass>
       </Button>
-      <HBox prefHeight="400.0" prefWidth="166.0" styleClass="right-bar" stylesheets="@first.css" />
-      <TextField fx:id="tftype" layoutX="122.0" layoutY="150.0" />
-      <TextField fx:id="tfdescription" layoutX="133.0" layoutY="207.0" />
-      <Label layoutX="155.0" layoutY="77.0" text="nom" />
-      <Label layoutX="168.0" layoutY="132.0" text="type" />
-      <Label layoutX="190.0" layoutY="187.0" text="description" />
-      <TextField fx:id="tfdate" layoutX="133.0" layoutY="271.0" />
-      <Label layoutX="166.0" layoutY="246.0" text="date" />
+      <HBox prefHeight="400.0" prefWidth="166.0" styleClass="right-bar" />
+      <TextField fx:id="tftype" layoutX="226.0" layoutY="149.0" prefHeight="25.0" prefWidth="174.0" />
+      <TextField fx:id="tfdescription" layoutX="226.0" layoutY="200.0" prefHeight="25.0" prefWidth="174.0" />
+      <Label layoutX="182.0" layoutY="154.0" text="type">
+         <font>
+            <Font name="Arial" size="13.0" />
+         </font></Label>
+      <Label layoutX="147.0" layoutY="205.0" text="description">
+         <font>
+            <Font name="Arial" size="13.0" />
+         </font></Label>
+      <Label layoutX="166.0" layoutY="246.0" text="Date">
+         <font>
+            <Font name="Arial" size="13.0" />
+         </font></Label>
+      <Label layoutX="168.0" layoutY="88.0" prefHeight="37.0" prefWidth="47.0" text="Nom">
+         <font>
+            <Font name="Arial" size="13.0" />
+         </font>
+      </Label>
+      <DatePicker layoutX="226.0" layoutY="242.0" />
    </children>
 </AnchorPane>
