--- a/src/edu/evenement/gui/AjouterEvenement.fxml
+++ b/src/edu/evenement/gui/AjouterEvenement.fxml
@@ -2,7 +2,6 @@
 
 <?import java.lang.String?>
 <?import javafx.scene.control.Button?>
-<?import javafx.scene.control.DatePicker?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
@@ -38,6 +37,6 @@
             <Font name="Arial" size="13.0" />
          </font>
       </Label>
-      <DatePicker layoutX="226.0" layoutY="242.0" />
+      <TextField fx:id="tfdate" layoutX="231.0" layoutY="242.0" prefHeight="25.0" prefWidth="174.0" />
    </children>
 </AnchorPane>
