--- a/src/edu/evenement/gui/ListeCategories.fxml
+++ b/src/edu/evenement/gui/ListeCategories.fxml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import java.net.URL?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.ListView?>
@@ -10,7 +9,7 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane prefHeight="436.0" prefWidth="771.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="edu.evenement.gui.ListeCategories">
+<AnchorPane prefHeight="436.0" prefWidth="771.0" stylesheets="@style.css" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="edu.evenement.gui.ListeCategories">
    <VBox layoutX="32.0" layoutY="41.0" prefHeight="395.0" prefWidth="709.0" spacing="10.0">
       <HBox prefHeight="25.0" prefWidth="563.0" spacing="5.0">
          <TextField fx:id="searchField" onAction="#rechercher" promptText="Rechercher" />
@@ -38,8 +37,4 @@
          </font></Label>
       <ListView fx:id="usersListView" onEditStart="#lissst" prefHeight="280.0" prefWidth="694.0" />
    </VBox>
-   <stylesheets>
-      <URL value="@style.css" />
-      <URL value="@style.css" />
-   </stylesheets>
 </AnchorPane>
