--- a/src/edu/evenement/gui/AjouterEvenement.fxml
+++ b/src/edu/evenement/gui/AjouterEvenement.fxml
@@ -2,6 +2,8 @@
 
 <?import java.lang.String?>
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ChoiceBox?>
+<?import javafx.scene.control.DatePicker?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
@@ -11,7 +13,7 @@
 <AnchorPane id="AnchorPane" prefHeight="400.0" prefWidth="600.0" stylesheets="@style.css" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="edu.evenement.gui.AjouterEvenementController">
    <children>
       <TextField fx:id="tfnom" layoutX="226.0" layoutY="76.0" prefHeight="4.0" prefWidth="174.0" styleClass="shadow" />
-      <Button fx:id="addcatevent" layoutX="280.0" layoutY="302.0" mnemonicParsing="false" onAction="#addcatevent" prefHeight="26.0" prefWidth="66.0" text="Ajouter">
+      <Button fx:id="addcatevent" layoutX="442.0" layoutY="332.0" mnemonicParsing="false" onAction="#addcatevent" prefHeight="26.0" prefWidth="109.0" text="Ajouter">
          <styleClass>
             <String fx:value="search-button" />
             <String fx:value="shadow" />
@@ -37,8 +39,8 @@
             <Font name="Arial" size="13.0" />
          </font>
       </Label>
-      <TextField fx:id="tfdate" layoutX="226.0" layoutY="201.0" prefHeight="25.0" prefWidth="174.0" />
-      <TextField fx:id="cat_id" layoutX="230.0" layoutY="250.0" prefHeight="25.0" prefWidth="174.0" />
-      <Label layoutX="181.0" layoutY="254.0" text="cat_id" />
+      <Label layoutX="179.0" layoutY="250.0" prefHeight="17.0" prefWidth="63.0" text="categorie" />
+      <ChoiceBox fx:id="categ_id" layoutX="242.0" layoutY="246.0" prefWidth="150.0" />
+      <DatePicker fx:id="tfdate" layoutX="226.0" layoutY="202.0" />
    </children>
 </AnchorPane>
