--- a/src/edu/evenement/gui/ModifierEvenement.fxml
+++ b/src/edu/evenement/gui/ModifierEvenement.fxml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.DatePicker?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
@@ -25,6 +26,6 @@
             <Font name="Arial" size="12.0" />
          </font></Label>
       <Label layoutX="170.0" layoutY="247.0" text="Date" />
-      <TextField layoutX="209.0" layoutY="243.0" prefHeight="25.0" prefWidth="174.0" />
+      <DatePicker fx:id="txtdate" layoutX="213.0" layoutY="243.0" />
    </children>
 </AnchorPane>
